--- a/lib/kamansky_web/live/settings_live/index.html.heex
+++ b/lib/kamansky_web/live/settings_live/index.html.heex
@@ -82,6 +82,37 @@
             </div>
             <div class="bg-white py-6 px-4 sm:p-6">
               <div class="form-group">
+                <label class="text-base font-medium text-gray-900">eBay</label>
+                <p class="text-sm leading-5 text-gray-500">Automatically relist eBay listings?</p>
+                <fieldset class="mt-4">
+                  <div class="space-y-4 sm:flex sm:items-center sm:space-y-0 sm:space-x-10">
+                    <div class="flex items-center">
+                      <%= radio_button f,
+                        :ebay_automatically_relist,
+                        true,
+                        class: "focus:ring-indigo-500 h-4 w-4 text-indigo-600 border-gray-300"
+                      %>
+                      <label for={input_id(f, :ebay_automatically_relist, true)} class="ml-3 block text-sm font-medium text-gray-700">
+                        On
+                      </label>
+                    </div>
+                    <div class="flex items-center">
+                      <%= radio_button f,
+                        :ebay_automatically_relist,
+                        false,
+                        class: "focus:ring-indigo-500 h-4 w-4 text-indigo-600 border-gray-300"
+                      %>
+                      <label for={input_id(f, :ebay_automatically_relist, false)} class="ml-3 block text-sm font-medium text-gray-700">
+                        Off
+                      </label>
+                    </div>
+                  </div>
+                </fieldset>
+                <div class="mt-2 text-xs">When enabled, eBay listings will be automatically relisted upon expiration.</div>
+              </div>
+            </div>
+            <div class="bg-white py-6 px-4 sm:p-6">
+              <div class="form-group">
                 <%= label f, :hipstamp_description %>
                 <div class="form-input">
                   <%= textarea f, 
