--- a/lib/kamansky_web/live/trend_live/index.html.heex
+++ b/lib/kamansky_web/live/trend_live/index.html.heex
@@ -61,7 +61,7 @@
             <tr class={if rem(counter, 2) != 0, do: "bg-white", else: "bg-gray-50"}>
               <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500"><%= era %></td>
               <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500"><%= format_decimal_as_currency(data.total_sales_income) %></td>
-              <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500"><%= format_decimal_as_currency(data.total_cost) %></td>
+              <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500"><%= format_decimal_as_currency(data.total_sold_cost) %></td>
               <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500"><%= data.profit_ratio %>%</td>
               <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500"><%= format_decimal_as_currency(data.median_sale_price) %></td>
               <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500"><%= data.percentage_of_total_sales %></td>
@@ -83,6 +83,7 @@
             <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Grade</th>
             <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Total Listings</th>
             <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Sold</th>
+            <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Sales ($)</th>
             <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Cost ($)</th>
             <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Profit Ratio</th>
             <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Average Time to Sale</th>
@@ -94,8 +95,9 @@
               <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500"><%= grade %></td>
               <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500"><%= data.total_listings %></td>
               <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500"><%= data.total_sold_listings %></td>
-              <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500"><%= format_decimal_as_currency(data.total_cost) %>%</td>
-              <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500"><%= data.profit_ratio %></td>
+              <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500"><%= format_decimal_as_currency(data.total_sales_income) %></td>
+              <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500"><%= format_decimal_as_currency(data.total_sold_cost) %></td>
+              <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500"><%= data.profit_ratio %> %</td>
               <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500"><%= data.average_listing_time %> days</td>
             </tr>
           <% end %>
