--- a/lib/kamansky_web/live/trend_live/index.html.heex
+++ b/lib/kamansky_web/live/trend_live/index.html.heex
@@ -83,6 +83,7 @@
             <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Grade</th>
             <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Total Listings</th>
             <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Sold</th>
+            <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Percent Sold</th>
             <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Sales ($)</th>
             <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Cost ($)</th>
             <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Profit Ratio</th>
@@ -95,6 +96,7 @@
               <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500"><%= grade %></td>
               <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500"><%= data.total_listings %></td>
               <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500"><%= data.total_sold_listings %></td>
+              <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500"><%= data.percent_sold %>%</td>
               <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500"><%= format_decimal_as_currency(data.total_sales_income) %></td>
               <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500"><%= format_decimal_as_currency(data.total_sold_cost) %></td>
               <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500"><%= data.profit_ratio %> %</td>
