--- a/lib/kamansky_web/live/trend_live/index.html.heex
+++ b/lib/kamansky_web/live/trend_live/index.html.heex
@@ -62,7 +62,7 @@
               <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500"><%= era %></td>
               <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500"><%= format_decimal_as_currency(data.total_sales_income) %></td>
               <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500"><%= format_decimal_as_currency(data.total_sold_cost) %></td>
-              <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500"><%= data.profit_ratio %>%</td>
+              <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500"><%= data.profit_ratio %>x</td>
               <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500"><%= format_decimal_as_currency(data.median_sale_price) %></td>
               <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500"><%= data.percentage_of_total_sales %></td>
               <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500"><%= data.percentage_of_total_listings %></td>
@@ -99,7 +99,7 @@
               <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500"><%= data.percent_sold %>%</td>
               <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500"><%= format_decimal_as_currency(data.total_sales_income) %></td>
               <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500"><%= format_decimal_as_currency(data.total_sold_cost) %></td>
-              <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500"><%= data.profit_ratio %> %</td>
+              <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500"><%= data.profit_ratio %>x</td>
               <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500"><%= data.average_listing_time %> days</td>
             </tr>
           <% end %>
